welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:8: error: reassignment to val
  if(day=0){
        ^